Dynamic Paint doesn't work in Solid Shading Mode (only in Textured Mode) #45515

Closed
opened 2015-07-21 16:44:36 +02:00 by Martin Felke · 12 comments
Member

System Information
OS X 10.9.5, Nvidia GTX 580

Blender Version
Broken: 2.75.2 30772b6 , 89e5c75
Worked: 2.75a

Short description of error
Dynamic Paint results are only visible in Textured Mode, not in Solid Mode any more (as in 2.75a)

Exact steps for others to reproduce the error
Just open the attached blend and see whether a blue paint spot appears below the cube in solid mode
should happen in 2.75a, should not happen in newer master builds

dynapaint1.blend

**System Information** OS X 10.9.5, Nvidia GTX 580 **Blender Version** Broken: 2.75.2 30772b6 , 89e5c75 Worked: 2.75a **Short description of error** Dynamic Paint results are only visible in Textured Mode, not in Solid Mode any more (as in 2.75a) **Exact steps for others to reproduce the error** Just open the attached blend and see whether a blue paint spot appears below the cube in solid mode should happen in 2.75a, should not happen in newer master builds [dynapaint1.blend](https://archive.blender.org/developer/F211346/dynapaint1.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @scorpion81

Added subscriber: @scorpion81

Added subscriber: @sindra1961

Added subscriber: @sindra1961

I think that it is a bug of 2.75a.
You set it in Dynamic Paint to output a result in Vertex color.
I think that it is not displayed in Solid view mode if you do not enable "Textured Solid" of Shading option.

I think that it is a bug of 2.75a. You set it in Dynamic Paint to output a result in Vertex color. I think that it is not displayed in Solid view mode if you do not enable "Textured Solid" of Shading option.
Member

Added subscribers: @miikah, @Psy-Fi, @JulianEisel

Added subscribers: @miikah, @Psy-Fi, @JulianEisel
Member

Think I agree here with @sindra1961, sounds reasonable that dynamic paint output isn't visible in solid view but only in texture view. @Psy-Fi, @miikah, what do you think?

Think I agree here with @sindra1961, sounds reasonable that dynamic paint output isn't visible in solid view but only in texture view. @Psy-Fi, @miikah, what do you think?

It's definitely a regression. Previous Blender versions displayed dynamic paint in solid shading mode and it's pretty difficult to work with it if you can't see what you are doing without switching to another (less practical) shading mode.

It's definitely a regression. Previous Blender versions displayed dynamic paint in solid shading mode and it's pretty difficult to work with it if you can't see what you are doing without switching to another (less practical) shading mode.

Solid rendering (not mode) never uploaded colors to the GPU as far as I know. Probably there was a branch in the code that forced textured drawing (always while in solid mode user side) for objects that had dynamic paint and that was eaten by a code elf somewhere in the process. But let me check previous versions first.

Solid rendering (not mode) never uploaded colors to the GPU as far as I know. Probably there was a branch in the code that forced textured drawing (always while in solid mode user side) for objects that had dynamic paint and that was eaten by a code elf somewhere in the process. But let me check previous versions first.
Member

Nasty code elves!

Nasty code elves!
Author
Member

hmm I just tested 2.74 and there it definitely worked in solid mode as well.

hmm I just tested 2.74 and there it definitely worked in solid mode as well.

This issue was referenced by 5878050a4b

This issue was referenced by 5878050a4bd163928ba16d8181e9034cb5347088

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45515
No description provided.