Fix T45515, dynamic paint not displaying colors correctly.

Looptri refactor artifact